--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=scm
+
+#mysql database configuration
+spring.datasource.url = jdbc:mysql://localhost:3306/scm
+spring.datasource.username = root
+spring.datasource.password = BHarggav@0037
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+#hibernate database configuration
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = update
+
+#To enable logging for SQL queries
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
