Thymeleaf Fragments with parameters

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "- ## Technologies Used - Spring Boot - Spring Framework - Spring Data JPA [ORM] - OAuth for social login - google and github login - Thymleaf template engine - Validation - Spring Security - MySQL Database - Java mail api - Tailwind CSS - JavaScript - Flowbite components",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
