Started Securing application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto = update
 #To enable logging for SQL queries
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
+
+# security configurations
+# spring.security.user.name=admin
+# spring.security.user.password=password
