--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<version>3.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -94,5 +98,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
