--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ spring.security.oauth2.client.registration.github.client-name=github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
+
+#cloudinary configuration
+cloudinary.cloud.name=${cloudinary.cloud.name}
+cloudinary.api.key=${cloudinary.api.key}
+cloudinary.api.secret=${cloudinary.api.secret}
