--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,12 @@ spring.security.oauth2.client.registration.github.scope=read:user,user:email
 cloudinary.cloud.name=${cloudinary.cloud.name}
 cloudinary.api.key=${cloudinary.api.key}
 cloudinary.api.secret=${cloudinary.api.secret}
+
+
+#email configuration
+spring.mail.host=live.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=api
+spring.mail.password=${API_KEY}
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
